[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "utils",
]

[profile.dev]
lto = true
opt-level = "s"
debug = 2
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
debug = 2
panic = "abort"

[patch.crates-io]
# ufmt = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}
# ufmt-write = {git="https://github.com/mrk-its/ufmt", branch="ptr_width_16_fix"}

