[workspace]
resolver = "2"
members = [
    "cycle_bug",
    "product_bug",
    "pi",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day17",
    "day18",
    "day19",
    "day20",
    "utils",
]

[profile.dev]
lto = true
opt-level = "s"
debug = 0
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
debug = 0
codegen-units = 1
panic = "abort"

[patch.crates-io]
a800xl-utils = {git='https://github.com/mrk-its/a800xl-utils'}