[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../utils"}
ufmt-stdio = "0"
mos-test = {path="../mos_test"}

# defmt-test = {version = "0", default-features=false}


[[test]]
name = "my-test"
harness = false

[[bin]]
name = "day01"
harness = false
