[package]
name = "day11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../utils"}
ufmt-stdio = "0"
mos-alloc = "0.2.0"

[target.'cfg(target_vendor = "atari8")'.dependencies]
a800xl-utils = "0.2"
