[package]
name = "pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
to_int_unchecked = []

[dependencies]
utils = {path="../utils"}
ufmt-stdio = "0"
mos-test = "0"


[[bin]]
name = "pi"
harness = false
